<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto" >

    <data>
        <variable name="config"
                  type="com.example.boxcontroller.view.viewmodel.ConfigurationBoxDefault"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_background"
            tools:context=".view.fragment.ConfigurationHelpFragment">

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/startGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/endGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/topGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.05"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/bottomGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.95"/>

        <View
                android:id="@+id/spacerLeftConfigurationTitle"
                app:layout_constraintLeft_toRightOf="@id/startGuide"
                app:layout_constraintTop_toTopOf="@id/configurationTitle"
                app:layout_constraintRight_toLeftOf="@id/configurationTitle"
                app:layout_constraintBottom_toBottomOf="@id/configurationTitle"
                app:layout_constraintWidth_percent="0.05"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/configurationTitle"
                app:layout_constraintTop_toBottomOf="@id/topGuide"
                app:layout_constraintLeft_toRightOf="@id/spacerLeftConfigurationTitle"
                app:layout_constraintRight_toLeftOf="@id/spacerRightConfigurationTitle"
                app:layout_constraintWidth_percent="0.65"
                android:textSize="@dimen/big_text_size"
                android:textAllCaps="true"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_field"
                android:gravity="center"
                android:text="@string/to_configure_the_box"/>

        <View
                android:id="@+id/spacerRightConfigurationTitle"
                app:layout_constraintWidth_percent="0.10"
                app:layout_constraintLeft_toRightOf="@id/configurationTitle"
                app:layout_constraintRight_toLeftOf="@id/endGuide"
                app:layout_constraintTop_toTopOf="@id/configurationTitle"
                app:layout_constraintBottom_toBottomOf="@id/configurationTitle"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fistStepConfigBox"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_field"
                android:layout_marginTop="30dp"
                android:textSize="@dimen/normal_text_size"
                android:text="@string/fisrt_step_configuration_box"
                app:layout_constraintStart_toEndOf="@id/startGuide"
                app:layout_constraintTop_toBottomOf="@id/configurationTitle" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/secondStepConfigBox"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_field"
                android:textSize="@dimen/normal_text_size"
                android:text="@string/second_step_configuration_box"
                app:layout_constraintStart_toEndOf="@id/startGuide"
                app:layout_constraintTop_toBottomOf="@id/fistStepConfigBox" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ssidWifiDefault"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_field"
                android:textSize="@dimen/normal_text_size"
                android:text="@{config.ssid}"
                app:layout_constraintStart_toEndOf="@id/startGuide"
                app:layout_constraintEnd_toStartOf="@id/endGuide"
                app:layout_constraintTop_toBottomOf="@id/secondStepConfigBox"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/thirdStepConfigBox"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_field"
                android:textSize="@dimen/normal_text_size"
                android:text="@string/third_step_config_box"
                app:layout_constraintStart_toEndOf="@id/startGuide"
                app:layout_constraintTop_toBottomOf="@id/ssidWifiDefault" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/passwordWifiDefault"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_field"
                android:textSize="@dimen/normal_text_size"
                android:text="@{config.password}"
                app:layout_constraintStart_toEndOf="@id/startGuide"
                app:layout_constraintEnd_toStartOf="@id/endGuide"
                app:layout_constraintTop_toBottomOf="@id/thirdStepConfigBox"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fourthStepConfigBox"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_field"
                android:textSize="@dimen/normal_text_size"
                android:text="@string/fourth_step_config_box"
                app:layout_constraintStart_toEndOf="@id/startGuide"
                app:layout_constraintTop_toBottomOf="@id/passwordWifiDefault" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fifthStepConfigBox"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_field"
                android:textSize="@dimen/normal_text_size"
                android:text="@string/fifth_step_config_box"
                app:layout_constraintStart_toEndOf="@id/startGuide"
                app:layout_constraintTop_toBottomOf="@id/fourthStepConfigBox" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sixthStepConfigBox"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_field"
                android:textSize="@dimen/normal_text_size"
                android:text="@string/sixth_step_config_box"
                app:layout_constraintStart_toEndOf="@id/startGuide"
                app:layout_constraintTop_toBottomOf="@id/fifthStepConfigBox" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/seventhStepConfigBox"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_field"
                android:textSize="@dimen/normal_text_size"
                android:text="@string/seventh_step_config_box"
                app:layout_constraintStart_toEndOf="@id/startGuide"
                app:layout_constraintTop_toBottomOf="@id/sixthStepConfigBox" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/eighthStepConfigBox"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_field"
                android:textSize="@dimen/normal_text_size"
                android:text="@string/eighnth_step_config_box"
                app:layout_constraintStart_toEndOf="@id/startGuide"
                app:layout_constraintTop_toBottomOf="@id/seventhStepConfigBox" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConfigureBox"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_field"
                android:text="@string/ready_start_config"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintBottom_toTopOf="@id/bottomGuide"
                app:layout_constraintEnd_toStartOf="@id/endGuide"
                app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>