<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:elevation="4dp"
        android:layout_margin="@dimen/my_device_item_margin"
        android:background="@drawable/my_device_background">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/box_name"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.40"
            app:layout_constraintStart_toEndOf="@id/startGuide"
            app:layout_constraintTop_toBottomOf="@id/topGuide"
            tools:hint="Box Name"
            android:textSize="@dimen/big_text_size"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_remaining"
            android:text="@string/remaining"
            android:textSize="@dimen/normal_text_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.20"
            app:layout_constraintStart_toEndOf="@id/box_name"
            app:layout_constraintTop_toBottomOf="@id/topGuide"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/remaining"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:gravity="end"
            android:textSize="@dimen/normal_text_size"
            tools:hint="35"
            app:layout_constraintWidth_percent="0.20"
            app:layout_constraintStart_toEndOf="@id/lbl_remaining"
            app:layout_constraintTop_toBottomOf="@id/topGuide"
            app:layout_constraintEnd_toStartOf="@id/endGuide"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_next_pill"
            android:text="@string/next_pill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintStart_toEndOf="@id/box_name"
            app:layout_constraintBottom_toBottomOf="@id/box_name"
            app:layout_constraintTop_toBottomOf="@id/lbl_remaining"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/next_pill"
            android:textAlignment="viewEnd"
            android:gravity="end"
            tools:hint="19:40"
            android:layout_width="0dp"
            android:textSize="@dimen/normal_text_size"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintEnd_toStartOf="@id/endGuide"
            app:layout_constraintBottom_toBottomOf="@id/box_name"
            app:layout_constraintTop_toBottomOf="@id/remaining"/>

    <View
            android:id="@+id/spacer"
            app:layout_constraintStart_toEndOf="@id/startGuide"
            app:layout_constraintEnd_toStartOf="@id/endGuide"
            app:layout_constraintTop_toBottomOf="@id/next_pill"
            app:layout_constraintWidth_percent="0.85"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_last_pill"
            android:text="@string/last_pill"
            android:layout_width="0dp"
            android:textSize="@dimen/normal_text_size"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintTop_toBottomOf="@id/spacer"
            app:layout_constraintStart_toEndOf="@id/startGuide"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/last_pill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:hint="7:40"
            android:textAlignment="viewEnd"
            android:gravity="end"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintStart_toEndOf="@id/lbl_last_pill"
            app:layout_constraintEnd_toStartOf="@id/endGuide"
            app:layout_constraintTop_toTopOf="@id/lbl_last_pill"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_buy_pills"
            android:text="@string/buy_more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintStart_toEndOf="@id/startGuide"
            app:layout_constraintTop_toBottomOf="@id/lbl_last_pill"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/buy_pills"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:gravity="end"
            tools:hint="31/02/20"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintStart_toEndOf="@id/lbl_buy_pills"
            app:layout_constraintTop_toBottomOf="@id/last_pill"
            app:layout_constraintEnd_toStartOf="@id/endGuide"/>

</androidx.constraintlayout.widget.ConstraintLayout>
