<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="box"
                type="com.example.boxcontroller.view.viewmodel.Box"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_background"
            tools:context=".view.fragment.SyncBoxFragment">

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/startGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/endGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/topGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.05"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/bottomGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.95"/>

        <View
                android:id="@+id/spacerLeftDeviceTitle"
                app:layout_constraintLeft_toRightOf="@id/startGuide"
                app:layout_constraintTop_toTopOf="@id/deviceTitle"
                app:layout_constraintRight_toLeftOf="@id/deviceTitle"
                app:layout_constraintBottom_toBottomOf="@id/deviceTitle"
                app:layout_constraintWidth_percent="0.05"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/deviceTitle"
                app:layout_constraintTop_toBottomOf="@id/topGuide"
                app:layout_constraintLeft_toRightOf="@id/spacerLeftDeviceTitle"
                app:layout_constraintRight_toLeftOf="@id/spacerRightDeviceTitle"
                app:layout_constraintWidth_percent="0.35"
                android:textSize="@dimen/big_text_size"
                android:textAllCaps="true"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_field"
                android:gravity="center"
                android:text="@string/device"/>

        <View
                android:id="@+id/spacerRightDeviceTitle"
                app:layout_constraintWidth_percent="0.40"
                app:layout_constraintLeft_toRightOf="@id/deviceTitle"
                app:layout_constraintRight_toLeftOf="@id/endGuide"
                app:layout_constraintTop_toTopOf="@id/deviceTitle"
                app:layout_constraintBottom_toBottomOf="@id/deviceTitle"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNameDevice"
                app:layout_constraintLeft_toRightOf="@id/startGuide"
                app:layout_constraintRight_toLeftOf="@id/etNameDevice"
                app:layout_constraintTop_toBottomOf="@id/deviceTitle"
                app:layout_constraintWidth_percent="0.35"
                android:textSize="@dimen/normal_text_size"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_field"
                android:gravity="center_vertical"
                android:text="@string/device_s_name"
                app:layout_constraintHorizontal_chainStyle="spread_inside"/>

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNameDevice"
                app:layout_constraintLeft_toRightOf="@id/tvNameDevice"
                app:layout_constraintRight_toLeftOf="@id/endGuide"
                app:layout_constraintTop_toBottomOf="@id/deviceTitle"
                app:layout_constraintWidth_percent="0.45"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_field"
                android:enabled="@{box.boxSynchronized}"
                android:textSize="@dimen/normal_text_size"
                android:text="@={box.name}"
                android:hint="@string/device_s_name"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:inputType="textPersonName"/>

        <View
                android:id="@+id/spacerDeviceWifiSession"
                app:layout_constraintLeft_toRightOf="@id/startGuide"
                app:layout_constraintTop_toBottomOf="@id/tvNameDevice"
                app:layout_constraintRight_toLeftOf="@id/endGuide"
                android:layout_width="0dp"
                android:layout_height="40dp"/>

        <View
                android:id="@+id/spacerLeftWifiTitle"
                app:layout_constraintLeft_toRightOf="@id/startGuide"
                app:layout_constraintTop_toTopOf="@id/wifiTitle"
                app:layout_constraintRight_toLeftOf="@id/wifiTitle"
                app:layout_constraintBottom_toBottomOf="@id/wifiTitle"
                app:layout_constraintWidth_percent="0.1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/wifiTitle"
                app:layout_constraintTop_toBottomOf="@id/spacerDeviceWifiSession"
                app:layout_constraintLeft_toRightOf="@id/spacerLeftDeviceTitle"
                app:layout_constraintRight_toLeftOf="@id/spacerRightDeviceTitle"
                app:layout_constraintWidth_percent="0.15"
                android:textSize="@dimen/big_text_size"
                android:textAllCaps="true"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_field"
                android:gravity="center"
                android:text="@string/wifi"
                app:layout_constraintHorizontal_bias="0.2"/>

        <View
                android:id="@+id/spacerRightWifiTitle"
                app:layout_constraintLeft_toRightOf="@id/wifiTitle"
                app:layout_constraintRight_toLeftOf="@id/endGuide"
                app:layout_constraintTop_toTopOf="@id/wifiTitle"
                app:layout_constraintBottom_toBottomOf="@id/wifiTitle"
                app:layout_constraintWidth_percent="0.55"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWifiSsid"
                app:layout_constraintLeft_toRightOf="@id/startGuide"
                app:layout_constraintRight_toLeftOf="@id/etNameDevice"
                app:layout_constraintTop_toBottomOf="@id/wifiTitle"
                app:layout_constraintWidth_percent="0.35"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_field"
                android:gravity="center_vertical"
                android:text="@string/wifi_s_name"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintHorizontal_chainStyle="spread"/>

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etWifiSsid"
                app:layout_constraintLeft_toRightOf="@id/tvNameDevice"
                app:layout_constraintRight_toLeftOf="@id/endGuide"
                app:layout_constraintTop_toBottomOf="@id/wifiTitle"
                app:layout_constraintWidth_percent="0.45"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_field"
                android:text="@={box.ssidWifiConfigured}"
                android:enabled="@{box.boxSynchronized}"
                android:textSize="@dimen/normal_text_size"
                android:hint="@string/wifi_s_name"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:inputType="text"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWifiPassword"
                app:layout_constraintLeft_toRightOf="@id/startGuide"
                app:layout_constraintRight_toLeftOf="@id/etNameDevice"
                app:layout_constraintTop_toBottomOf="@id/tvWifiSsid"
                app:layout_constraintWidth_percent="0.35"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_field"
                android:gravity="center_vertical"
                android:text="@string/wifi_s_password"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintHorizontal_chainStyle="spread"/>

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etWifiPassword"
                app:layout_constraintLeft_toRightOf="@id/tvNameDevice"
                app:layout_constraintRight_toLeftOf="@id/endGuide"
                app:layout_constraintTop_toBottomOf="@id/etWifiSsid"
                app:layout_constraintWidth_percent="0.45"
                android:enabled="@{box.boxSynchronized}"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_field"
                android:text="@={box.passwordWifiConfigured}"
                android:hint="@string/wifi_s_password"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:inputType="textPassword"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSaveBoxConfiguration"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_field"
                android:text="@string/save"
                android:textSize="@dimen/normal_text_size"
                android:enabled="false"
                app:layout_constraintEnd_toStartOf="@+id/endGuide"
                app:layout_constraintBottom_toTopOf="@+id/bottomGuide"
                app:layout_constraintTop_toBottomOf="@+id/etWifiPassword"
                app:layout_constraintVertical_bias="1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>